# fast_api_langgraph_template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
app/: __init__.py  __main__.py  main.py
app/core/: langgraph.py  security.py  settings.py
app/graphs/: utils.py
app/graphs/cv_parser/: graph.py  nodes.py  routing.py  state.py
app/routers/: parse_cv.py  utils.py
app/schemas/: parse_cv.py  snake.py
