[project]
name = "fast-api-bootstrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.2",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.4.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
